kubernetes/main/apps/gaming/pterodactyl/app/node/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: "pterodactyl-wings-internal"
  namespace: artemis-cluster
spec:
  hostnames:
    - "gameserver-node01.dcunha.io"
  parentRefs:
    - name: internal-gateway
      namespace: default
      sectionName: http
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: pterodactyl-wings
          kind: Service
          namespace: artemis-cluster
          port: 8080
